--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,8 @@
   "main": "index.ts",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.24.0",
+    "@elastic/elasticsearch": "^7.15.0",
     "dotenv": "^10.0.0",
-    "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.1",
     "path": "^0.12.7",
